--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,10 +2,10 @@
   margin: 0;
   padding: 0;
 }
+body {
+  background-color: #0c192c;
+  color: rgb(156, 141, 141);
+}
 .App {
   text-align: center;
-}
-
-.health-button {
-  float: right;
 }
