--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
 header {
-  background-color: rgb(16, 167, 173);
+  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
   padding: 15px;
+  font-family: "Alfa Slab One", cursive;
 }
