--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Alfa Slab One", cursive;
 }
 body {
-  background-color: #0c192c;
-  color: rgb(156, 141, 141);
+  color: white;
+  background: linear-gradient(#9198e5, #2c849f);
 }
 .App {
   text-align: center;
