--- a/client/src/components/Unhealthy.css
+++ b/client/src/components/Unhealthy.css
@@ -1,3 +1,13 @@
 .unhealthy-meal {
-  float: left;
+  margin: 0 5% 5% 5%;
+  border: 2px solid black;
+  padding: 20px;
+  text-align: center;
+}
+
+h2 {
+  color: white;
+  font-weight: bold;
+  padding: 3%;
+  font-size: 36px;
 }
