feat: extract calories from clicked div

--- a/client/src/components/Healthy.css
+++ b/client/src/components/Healthy.css
@@ -8,7 +8,7 @@ h1 {
 
 .fruit {
   color: white;
-  background-color: rgb(250, 148, 15);
+  background-color: #fa9500;
   margin: 5px;
   border-radius: 10px;
   text-align: center;
