--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,9 @@
 }
 body {
   color: white;
-  background: linear-gradient(#9198e5, #2c849f);
+  background: linear-gradient(#4cb8f1, #3ef3e6);
+  min-height: 100vh;
+  width: 100vw;
 }
 .App {
   text-align: center;
