--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,14 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&display=swap");
 header {
   padding: 5%;
   font-size: 40px;
-  font-family: "Alfa Slab One", cursive;
+  font-weight: 400;
 }
+
 .glow {
-  font-size: 80px;
-  color: #fff;
-  text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
+  font-family: "Anton", sans-serif;
+  color: rgb(249, 234, 234);
 }
